--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,21 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@vitejs/plugin-react": "^4.4.0",
-    "vite": "^6.3.2"
+    "@vitest/coverage-v8": "^3.1.1",
+    "jsdom": "^26.1.0",
+    "msw": "^2.7.5",
+    "vite": "^6.3.2",
+    "vitest": "^3.1.1"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   }
 }
