--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,6 @@
 {
   "dependencies": {
     "@tanstack/react-query": "^5.74.4",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.4",
     "react": "^19.1.0",
@@ -12,13 +10,19 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.0",
     "@vitest/coverage-v8": "^3.1.1",
+    "autoprefixer": "^10.4.21",
     "jsdom": "^26.1.0",
     "msw": "^2.7.5",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4",
     "vite": "^6.3.2",
     "vitest": "^3.1.1"
   },
